# mailspring

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/ui/: CMakeLists.txt  main-window.cpp  main-window.h  ui-main-window.cpp
app/ui/sidebar/: CMakeLists.txt  sidebar.cmake  sidebar.cpp  sidebar.h  ui-sidebar.cpp
app/ui/widget/: action-group.cpp  action-group.h  action-label.cpp  action-label.h  widget.cmake
